<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="265dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:layout_margin="2dp"
        app:cardCornerRadius="10dp"
        android:elevation="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:id="@+id/mainheading"
                android:padding="5dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="@string/mock_title"
                android:textStyle="bold"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="115dp"
                android:layout_marginTop="0dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:maxLines="5"
                    android:padding="5dp"
                    android:id="@+id/content"
                    android:textSize="18sp"
                    android:text="@string/mock_description">

                </TextView>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:layout_weight="3"
                    android:scaleType="centerCrop"
                    android:id="@+id/imageview"
                    android:src="@drawable/ic_launcher_background"
                    android:contentDescription="@string/todo" />
            </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/by_brijiesh"
            android:textSize="18sp"
            android:layout_marginStart="5dp"
            android:textStyle="italic"
            android:id="@+id/author"
            android:textColor="@color/black"
            android:padding="0dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/time"
            android:padding="5dp"
            android:textColor="@color/black"
            android:text="@string/published_at"
            android:textStyle="bold"
            android:textSize="18sp">

        </TextView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>